--- a/ObjectMappingSample/ObjectMappingSample/Base.lproj/Main_iPhone.storyboard
+++ b/ObjectMappingSample/ObjectMappingSample/Base.lproj/Main_iPhone.storyboard
@@ -1,10 +1,26 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="v1j-jJ-U8X">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="ZeP-qj-dqv">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
-        <!--Commits View Controller-->
+        <!--Navigation Controller-->
+        <scene sceneID="mGD-6g-1hl">
+            <objects>
+                <navigationController definesPresentationContext="YES" id="ZeP-qj-dqv" sceneMemberID="viewController">
+                    <nil key="simulatedStatusBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="aoL-us-XdW">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="v1j-jJ-U8X" kind="relationship" relationship="rootViewController" id="AwY-lz-G1C"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4Ay-2A-gjF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="63" y="106"/>
+        </scene>
+        <!--Commits View Controller - GitHub Commits-->
         <scene sceneID="SHy-Pt-JXf">
             <objects>
                 <tableViewController id="v1j-jJ-U8X" customClass="GHCommitsViewController" sceneMemberID="viewController">
@@ -14,7 +30,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
                             <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="HRh-A2-qpM" detailTextLabel="Za4-6H-7k8" rowHeight="88" style="IBUITableViewCellStyleSubtitle" id="COj-Dq-myQ">
-                                <rect key="frame" x="0.0" y="22" width="320" height="88"/>
+                                <rect key="frame" x="0.0" y="66" width="320" height="88"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="COj-Dq-myQ" id="fcN-v0-V1Z">
                                     <rect key="frame" x="0.0" y="0.0" width="287" height="87"/>
@@ -36,6 +52,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="hlT-AV-Bbm" kind="push" id="gxU-er-fTW"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -43,10 +62,31 @@
                             <outlet property="delegate" destination="v1j-jJ-U8X" id="4K7-uz-SKf"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" title="GitHub Commits" id="kpN-Qb-Wvz"/>
+                    <nil key="simulatedStatusBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fKe-Oe-vl2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="474" y="111"/>
+            <point key="canvasLocation" x="438" y="106"/>
+        </scene>
+        <!--View Controller - Commit Details-->
+        <scene sceneID="cEE-t9-V8Q">
+            <objects>
+                <viewController id="hlT-AV-Bbm" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dmu-Ec-A8Z"/>
+                        <viewControllerLayoutGuide type="bottom" id="RK6-Ba-VSB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9dq-ru-nPn">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Commit Details" id="Sfq-jW-qkE"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DLo-2K-n4L" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="823" y="106"/>
         </scene>
     </scenes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
