Updated commit file table view cell

--- a/ObjectMappingSample/ObjectMappingSample/Base.lproj/Main_iPhone.storyboard
+++ b/ObjectMappingSample/ObjectMappingSample/Base.lproj/Main_iPhone.storyboard
@@ -160,11 +160,11 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" reuseIdentifier="Cell" textLabel="ya1-7B-04w" detailTextLabel="evN-wK-R0B" style="IBUITableViewCellStyleSubtitle" id="0Xy-0U-6d3">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="Cell" textLabel="ya1-7B-04w" detailTextLabel="evN-wK-R0B" style="IBUITableViewCellStyleSubtitle" id="0Xy-0U-6d3">
                                         <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0Xy-0U-6d3" id="8fN-x8-a0z">
-                                            <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="ya1-7B-04w">
